tests/errors/test_02.x
// Identifier redeclared

let x: int = 21;
let x: int = 21;

fn main() -> int {}
